[package]
name = "todo-list"
version = "0.1.0"
authors = ["qiwihui <qwh005007@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde="1.0.117"
config = "0.10.1"
deadpool-postgres = "0.5.0"
tokio-postgres = "0.5.1"