[package]
name = "todo-list"
version = "0.1.0"
authors = ["qiwihui <qwh005007@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1"
actix-web = "3"
serde="1.0.117"
deadpool-postgres = "0.5.0"
tokio-postgres = "0.5.1"
dotenv = "0.15.0"
config = "0.10.1"
tokio-pg-mapper = "0.1"
tokio-pg-mapper-derive = "0.1"
env_logger = "0.8"
log="0.4"

[dev-dependencies]
lazy_static = "1.4.0"
serde_json = "1.0.48"